--- a/flutter_gl/android/build.gradle
+++ b/flutter_gl/android/build.gradle
@@ -50,5 +50,5 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
 
-    implementation(name:'threeegl', ext:'aar')
+    implementation files('libs/aars/threeegl.aar')
 }
