--- a/flutter_gl/android/build.gradle
+++ b/flutter_gl/android/build.gradle
@@ -41,6 +41,13 @@ android {
     lintOptions {
         disable 'InvalidPackage'
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+    kotlinOptions {
+        jvmTarget = "17"
+    }
 
 }
 
