--- a/flutter_gl/android/build.gradle
+++ b/flutter_gl/android/build.gradle
@@ -55,6 +55,12 @@ android {
             pickFirsts = ['META-INF/MANIFEST.MF']
         }
     }
+    buildTypes {
+        release {
+            // 로컬 AAR을 릴리즈 빌드에 포함
+            consumerProguardFiles 'proguard-rules.pro'
+        }
+    }
 }
 
 dependencies {
@@ -63,5 +69,5 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
 
-    implementation files('libs/aars/threeegl.aar')
+    implementation fileTree(dir: 'libs/aars', include: ['*.aar'])
 }
