--- a/flutter_gl/android/build.gradle
+++ b/flutter_gl/android/build.gradle
@@ -69,5 +69,5 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
 
-    implementation fileTree(dir: 'libs/aars', include: ['*.aar'])
+    api fileTree(dir: 'libs/aars', include: ['*.aar'])
 }
