--- a/flutter_gl/android/build.gradle
+++ b/flutter_gl/android/build.gradle
@@ -18,10 +18,6 @@ rootProject.allprojects {
     repositories {
         google()
         mavenCentral()
-
-        flatDir {
-            dirs 'libs/aars'
-        }
     }
 }
 
@@ -33,41 +29,40 @@ android {
     compileSdkVersion 33
 
     sourceSets {
-        main.java.srcDirs += 'src/main/kotlin'
+        main {
+            java.srcDirs += 'src/main/kotlin'
+            // AAR 내용을 직접 포함
+            jniLibs.srcDirs = ['libs/aars']
+            resources {
+                srcDirs = ['libs/aars']
+                includes = ['*.aar']
+            }
+        }
     }
+
     defaultConfig {
         minSdkVersion 24
     }
+
     lintOptions {
         disable 'InvalidPackage'
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
     }
+
     kotlinOptions {
         jvmTarget = "17"
-    }
-     bundle {
-        aar {
-            // 로컬 AAR 파일을 포함하도록 설정
-            includeLibraryResourcesAndManifests = true
-            pickFirsts = ['META-INF/MANIFEST.MF']
-        }
-    }
-    buildTypes {
-        release {
-            // 로컬 AAR을 릴리즈 빌드에 포함
-            consumerProguardFiles 'proguard-rules.pro'
-        }
     }
 }
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
-
-    api fileTree(dir: 'libs/aars', include: ['*.aar'])
+    
+    // AAR 파일을 컴파일타임에만 사용
+    compileOnly files('libs/aars/threeegl.aar')
 }
